Configured static folder and made a studentdashboard

--- a/LMS/templates/login_page.html
+++ b/LMS/templates/login_page.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Login Page</title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'login.css' %}">
     <!-- Add your CSS styling here -->
 </head>
 <body>
