--- a/LMS/templates/student_login.html
+++ b/LMS/templates/student_login.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Student Login</title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'studentlogin.css' %}">
+
     <!-- Add your CSS styling here -->
 </head>
 <body>
