--- a/LMS/templates/student_dashboard.html
+++ b/LMS/templates/student_dashboard.html
@@ -44,3 +44,7 @@
         </div>
     </section>
 {% endblock %}
+<form action="{% url 'logout' %}" method="post">
+    {% csrf_token %}
+    <button type="submit">Logout</button>
+</form>
