--- a/LMS/templates/teacher_signup.html
+++ b/LMS/templates/teacher_signup.html
@@ -1,16 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Teacher Signup</title>
+    <title>teacher Signup </title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'teachersignup.css' %}">
+
     <!-- Add your CSS styling here -->
 </head>
+
 <body>
-    <h1>Teacher Signup</h1>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Sign Up</button>
+    <form method="POST">
+        {% csrf_token %} 
+    <div class="desktop-35">
+        <img class="commonbg" src="{% static 'commonbg.png' %}" />
+        <div class="frame-54">
+            <img class="ilogo" src="{% static 'ilogo.png' %}" />
+        </div>
+        <div class="frame-55">
+            <div class="frame-552">
+                <div class="frame-28">
+                    <div class="select-role">Select Role:</div>
+                    <div class="frame-41">
+                        <svg class="keyboard-arrow-down" width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M8.11997 10.0669L12 13.9469L15.88 10.0669C16.27 9.67691 16.9 9.67691 17.29 10.0669C17.68 10.4569 17.68 11.0869 17.29 11.4769L12.7 16.0669C12.31 16.4569 11.68 16.4569 11.29 16.0669L6.69997 11.4769C6.30997 11.0869 6.30997 10.4569 6.69997 10.0669C7.08997 9.68691 7.72997 9.67691 8.11997 10.0669Z"
+                            fill="#955C7E" />
+                        </svg>
+                        <div class="faculty">Faculty</div>
+                    </div>
+                </div>
+            </div>
+            <div class="frame-57">
+                <div class="frame-27">
+                    <div class="faculty-sign-up">Faculty Sign Up</div>
+                </div>
+                <div class="frame-282">
+                    <div class="frame-18">
+                        <div class="frame-38">
+                            <div class="frame-35">
+                                <div class="frame-24">
+                                    <div class="faculty-id">Faculty ID:</div>
+                                    <input type="text" class="frame-412" placeholder="Enter Faculty ID" />
+                                </div>
+                            </div>
+                            <div class="frame-36">
+                                <div class="frame-24">
+                                    <div class="password">Password:</div>
+                                    <input type="password" class="frame-412" placeholder="Enter Password" />
+                                </div>
+                                <div class="frame-26">
+                                    <div class="confirm-password">Confirm Password:</div>
+                                    <input type="password" class="frame-412" placeholder="Enter Password" />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="frame-42">
+                            <div class="frame-39">
+                                <div class="frame-30">
+                                    <div class="frame-24">
+                                        <div class="name">Name:</div>
+                                        <input type="text" class="frame-412" placeholder="Name" />
+                                    </div>
+                                    <div class="frame-272">
+                                        <div class="qualifications">Qualifications:</div>
+                                        <input type="text" class="frame-413" placeholder="Enter Qualifications" />
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="frame-37">
+                                <div class="frame-24">
+                                    <div class="email-id">Email ID:</div>
+                                    <input type="email" class="frame-412" placeholder="Enter Email ID" />
+                                </div>
+                                <div class="frame-26">
+                                    <div class="phone-no">Phone No:</div>
+                                    <input type="number" class="frame-412" placeholder="Enter Phone" />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="frame-40">
+                        <div class="frame-382">
+                            <div class="frame-24">
+                                <div class="papers-published">Papers Published:</div>
+                                <input type="text" class="frame-413" placeholder="Enter Faculty ID" />
+                            </div>
+                            <div class="frame-272">
+                                <div class="dept-id">Dept ID:</div>
+                                <input type="text" class="frame-413" placeholder="Enter Dept-ID">
+                                {{ form.Dept_ID }}
+                            </div>                       
+                            <div class="frame-283">
+                                <div class="subject-id">Subject ID:</div>
+                                <input type="text" class="frame-412" placeholder="Enter SubjectIDs" />
+                            </div>
+                            </div>
+                        </div>                        
+                    <div class="frame-262">
+                        <button type="submit" name="submit">Signup</button>
+                    </div>
+                    </div>
+                    <div class="already-have-an-account-log-in">
+                        <span>
+                                <span class="already-have-an-account-log-in-span">
+                                Already have an account?
+                                </span>
+                        <span class="already-have-an-account-log-in-span2">Log in</span>
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    </div>
+    </div>
+    </div>
     </form>
 </body>
+
 </html>
