--- a/LMS/templates/teacher_signup.html
+++ b/LMS/templates/teacher_signup.html
@@ -23,11 +23,6 @@
                 <div class="frame-28">
                     <div class="select-role">Select Role:</div>
                     <div class="frame-41">
-                        <svg class="keyboard-arrow-down" width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M8.11997 10.0669L12 13.9469L15.88 10.0669C16.27 9.67691 16.9 9.67691 17.29 10.0669C17.68 10.4569 17.68 11.0869 17.29 11.4769L12.7 16.0669C12.31 16.4569 11.68 16.4569 11.29 16.0669L6.69997 11.4769C6.30997 11.0869 6.30997 10.4569 6.69997 10.0669C7.08997 9.68691 7.72997 9.67691 8.11997 10.0669Z"
-                            fill="#955C7E" />
-                        </svg>
-                        <div class="faculty">Faculty</div>
                     </div>
                 </div>
             </div>
@@ -88,7 +83,6 @@
                             </div>
                             <div class="frame-272">
                                 <div class="dept-id">Dept ID:</div>
-                                <input type="text" class="frame-413" placeholder="Enter Dept-ID">
                                 {{ form.Dept_ID }}
                             </div>                       
                             <div class="frame-283">
@@ -98,17 +92,10 @@
                             </div>
                         </div>                        
                     <div class="frame-262">
-                        <button type="submit" name="submit">Signup</button>
+                        <button type="submit" class="sign_up" name="submit">Signup</button>
                     </div>
                     </div>
-                    <div class="already-have-an-account-log-in">
-                        <span>
-                                <span class="already-have-an-account-log-in-span">
-                                Already have an account?
-                                </span>
-                        <span class="already-have-an-account-log-in-span2">Log in</span>
-                        </span>
-                    </div>
+                    <div class="text-center">Don't have an account? <a href="login_page.html">SignUp here</a></div>
                 </div>
             </div>
         </div>
@@ -121,3 +108,4 @@
 </body>
 
 </html>
+
