--- a/LMS/static/studentsignup.css
+++ b/LMS/static/studentsignup.css
@@ -1,8 +1,8 @@
-.desktop-34,
-.desktop-34 * {
+.desktop-30,
+.desktop-30 * {
   box-sizing: border-box;
 }
-.desktop-34 {
+.desktop-30 {
   background: #ffffff;
   height: 1024px;
   position: relative;
@@ -18,26 +18,26 @@
   object-fit: cover;
 }
 .frame-54 {
-  background: #fff5fb;
-  border-radius: 10px;
-  padding: 4px;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  align-items: flex-start;
-  justify-content: flex-start;
-  position: absolute;
-  left: 20px;
-  top: 20px;
-}
-.ilogo {
-  flex-shrink: 0;
-  width: 153px;
-  height: 55px;
-  position: relative;
-  object-fit: cover;
-}
-.frame-29 {
+    background: #fff5fb;
+    border-radius: 10px;
+    padding: 4px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: flex-start;
+    justify-content: flex-start;
+    position: absolute;
+    left: 20px;
+    top: 20px;
+  }
+  .ilogo {
+    flex-shrink: 0;
+    width: 153px;
+    height: 55px;
+    position: relative;
+    object-fit: cover;
+  }
+.frame-55 {
   background: #fff5fb;
   border-radius: 16px;
   padding: 32px;
@@ -47,16 +47,16 @@
   align-items: center;
   justify-content: center;
   position: absolute;
-  left: calc(50% - 178px);
-  top: calc(50% - 272px);
+  left: calc(50% - 309px);
+  top: calc(50% - 438px);
   box-shadow: 2px 2px 30px 0px rgba(0, 189, 170, 0.25);
 }
-.frame-55 {
+.frame-552 {
   border-radius: 10px;
   padding: 10px;
   display: flex;
   flex-direction: row;
-  gap: 12px;
+  gap: 50px;
   align-items: center;
   justify-content: center;
   flex-shrink: 0;
@@ -97,7 +97,7 @@
   top: calc(50% - 12.22px);
   overflow: visible;
 }
-.faculty {
+.student {
   color: #955c7e;
   text-align: left;
   font-family: "Poppins-Regular", sans-serif;
@@ -107,7 +107,7 @@
   left: 7px;
   top: calc(50% - 10px);
 }
-.frame-58 {
+.frame-56 {
   display: flex;
   flex-direction: column;
   gap: 42px;
@@ -125,7 +125,7 @@
   flex-shrink: 0;
   position: relative;
 }
-.faculty-login, .student-login {
+.student-sign-up {
   color: #2e091f;
   text-align: left;
   font-family: "Poppins-Medium", sans-serif;
@@ -178,7 +178,7 @@
   flex-shrink: 0;
   position: relative;
 }
-.faculty-id {
+.usn {
   color: #2e091f;
   text-align: left;
   font-family: "Poppins-Regular", sans-serif;
@@ -214,6 +214,193 @@
   position: relative;
 }
 .frame-26 {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-shrink: 0;
+  position: relative;
+}
+.confirm-password {
+  color: #2e091f;
+  text-align: left;
+  font-family: "Poppins-Regular", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  position: relative;
+}
+.frame-42 {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-shrink: 0;
+  position: relative;
+}
+.frame-39 {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-shrink: 0;
+  position: relative;
+}
+.frame-30 {
+  display: flex;
+  flex-direction: row;
+  gap: 35px;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-shrink: 0;
+  position: relative;
+}
+.name {
+  color: #2e091f;
+  text-align: left;
+  font-family: "Poppins-Regular", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  position: relative;
+}
+.frame-272 {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-shrink: 0;
+  position: relative;
+}
+.gender {
+  color: #2e091f;
+  text-align: left;
+  font-family: "Poppins-Regular", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  position: relative;
+}
+.frame-413 {
+  border-radius: 6px;
+  border-style: solid;
+  border-color: #955c7e;
+  border-width: 1px;
+  flex-shrink: 0;
+  width: 161px;
+  height: 36px;
+  position: relative;
+}
+.keyboard-arrow-down2 {
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  right: 6px;
+  top: calc(50% - 12.22px);
+  overflow: visible;
+}
+.frame-37 {
+  display: flex;
+  flex-direction: row;
+  gap: 35px;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-shrink: 0;
+  position: relative;
+}
+.email-id {
+  color: #2e091f;
+  text-align: left;
+  font-family: "Poppins-Regular", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  position: relative;
+}
+.phone-no {
+  color: #2e091f;
+  text-align: left;
+  font-family: "Poppins-Regular", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  position: relative;
+}
+.frame-40 {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-shrink: 0;
+  position: relative;
+}
+.frame-382 {
+  display: flex;
+  flex-direction: row;
+  gap: 36px;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-shrink: 0;
+  position: relative;
+}
+.joining-year {
+  color: #2e091f;
+  text-align: left;
+  font-family: "Poppins-Regular", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  position: relative;
+}
+.keyboard-arrow-down3 {
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  right: 6px;
+  top: calc(50% - 12.22px);
+  overflow: visible;
+}
+.dept-id {
+  color: #2e091f;
+  text-align: left;
+  font-family: "Poppins-Regular", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  position: relative;
+}
+.keyboard-arrow-down4 {
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  right: 6px;
+  top: calc(50% - 12.22px);
+  overflow: visible;
+}
+.frame-283 {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-shrink: 0;
+  position: relative;
+}
+.subject-id {
+  color: #2e091f;
+  text-align: left;
+  font-family: "Poppins-Regular", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  position: relative;
+}
+.keyboard-arrow-down5 {
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  right: 6px;
+  top: calc(50% - 12.22px);
+  overflow: visible;
+}
+.frame-262 {
   background: #8c4a6f;
   border-radius: 6px;
   padding: 12px 32px 12px 32px;
@@ -226,7 +413,7 @@
   position: relative;
   overflow: hidden;
 }
-.login {
+.sign-up {
   color: #ffffff;
   text-align: left;
   font-family: "Poppins-Medium", sans-serif;
@@ -234,7 +421,7 @@
   font-weight: 500;
   position: relative;
 }
-.don-t-have-an-account-sign-up {
+.already-have-an-account-log-in {
   color: #2e091f;
   text-align: left;
   font-family: "-", sans-serif;
@@ -242,13 +429,13 @@
   font-weight: 400;
   position: relative;
 }
-.don-t-have-an-account-sign-up-span {
+.already-have-an-account-log-in-span {
   color: #2e091f;
   font-family: "Poppins-Regular", sans-serif;
   font-size: 18px;
   font-weight: 400;
 }
-.don-t-have-an-account-sign-up-span2 {
+.already-have-an-account-log-in-span2 {
   color: #2e091f;
   font-family: "Poppins-Medium", sans-serif;
   font-size: 18px;
