--- a/LMS/templates/student_signup.html
+++ b/LMS/templates/student_signup.html
@@ -1,194 +1,117 @@
 <!DOCTYPE html>
-{% load static %}
-
-<html lang="en" dir="ltr">
+<html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>SMS - Django</title>
-    <style type="text/css">
-        body {
-            color: #aa082e;
-            background-color: #b6bde7;
-            font-family: 'Roboto', sans-serif;
-        }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Student Signup </title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'studentsignup.css' %}">
 
-        a:link {
-            text-decoration: none;
-        }
-
-        .note {
-            text-align: center;
-            height: 80px;
-            background: -webkit-linear-gradient(left, #343a40, #607d8b);
-            color: #fff;
-            font-weight: bold;
-            line-height: 80px;
-        }
-
-        .form-content {
-            padding: 5%;
-            border: 1px solid #ced4da;
-            margin-bottom: 2%;
-        }
-
-        .form-control {
-            border-radius: 1.5rem;
-        }
-
-        .btnSubmit {
-            color: #ffffff;
-            text-align: left;
-            font-family: "Poppins-Medium", sans-serif;
-            font-size: 20px;
-            font-weight: 500;
-            position: relative;
-        }
-
-        /* Add the custom styles */
-        .desktop-30,
-        .desktop-30 * {
-            box-sizing: border-box;
-        }
-
-        .desktop-30 {
-            background: #ffffff;
-            height: 1024px;
-            position: relative;
-            overflow: hidden;
-        }
-        .commonbg {
-            width: 1920px;
-            height: 1280.22px;
-            position: absolute;
-            left: calc(50% - 960px);
-            top: calc(50% - 640px);
-            filter: blur(32px);
-            object-fit: cover;
-            }
-        .frame-54 {
-            background: #fff5fb;
-            border-radius: 10px;
-            padding: 4px;
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-            align-items: flex-start;
-            justify-content: flex-start;
-            position: absolute;
-            left: 20px;
-            top: 20px;
-            }
-        .ilogo {
-            flex-shrink: 0;
-            width: 153px;
-            height: 55px;
-            position: relative;
-            object-fit: cover;
-            }
-        .frame-55 {
-            background: #fff5fb;
-            border-radius: 16px;
-            padding: 32px;
-            display: flex;
-            flex-direction: column;
-            gap: 12px;
-            align-items: center;
-            justify-content: center;
-            position: absolute;
-            left: calc(50% - 309px);
-            top: calc(50% - 437px);
-            box-shadow: 2px 2px 30px 0px rgba(0, 189, 170, 0.25);
-            }
-
-
-                    /* Add the rest of your custom styles here */
-
-    </style>
 </head>
 
 <body>
-    <br>
-    <br>
-    <br>
-    <br>
-    <div class="desktop-30">
-        <img class="commonbg" src="{% static 'commonbg.png' %}" />
-        <div class="frame-54">
-            <img class="ilogo" src="{% static 'ilogo.png' %}" />
-        </div>
-        <div class="frame-55">
-
-        <!-- Student Signup Form -->
-        <form method="post">
-            {% csrf_token %}
-            <div class="container register-form">
-                <div class="form">
-                    <div class="note">
-                        <p>New Admission To School</p>
+    <form method="POST">
+        {% csrf_token %}
+        <div class="desktop-30">
+            <img class="commonbg" src="{% static 'commonbg.png' %}" />
+            <div class="frame-54">
+                <img class="ilogo" src="{% static 'ilogo.png' %}" />
+            </div>
+            <div class="frame-55">
+                <div class="frame-552">
+                    <div class="frame-28">
+                        <div class="select-role">Select Role:</div>
+                        <div class="frame-41">
+                            <div class="student">Student</div>
+                        </div>
                     </div>
-
-                    <div class="form-content">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    {{ form.USN.label_tag }}
-                                    {{ form.USN }}
+                </div>
+                <div class="frame-56">
+                    <div class="frame-27">
+                        <div class="student-sign-up">Student Sign Up</div>
+                    </div>
+                    <div class="frame-282">
+                        <div class="frame-18">
+                            <div class="frame-38">
+                                <div class="frame-35">
+                                    <div class="frame-24">
+                                        <div class="usn">USN:</div>
+                                        <input type="text" class="frame-412" placeholder="Enter USN" />
+                                    </div>
                                 </div>
-                                <div class="form-group">
-                                    {{ form.Name.label_tag }}
-                                    {{ form.Name }}
-                                </div>
-                                <div class="form-group">
-                                    {{ form.Gender.label_tag }}
-                                    {{ form.Gender }}
-                                </div>
-                                <div class="form-group">
-                                    {{ form.Phone_No.label_tag }}
-                                    {{ form.Phone_No }}
-                                </div>
-                                <div class="form-group">
-                                    {{ form.Email.label_tag }}
-                                    {{ form.Email }}
+                                <div class="frame-36">
+                                    <div class="frame-24">
+                                        <div class="password">Password:</div>
+                                        <input type="password" class="frame-412" placeholder="Enter Password" />
+                                    </div>
+                                    <div class="frame-26">
+                                        <div class="confirm-password">Confirm Password:</div>
+                                        <input type="password" class="frame-412" placeholder="Enter Password" />
+                                    </div>
                                 </div>
                             </div>
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    {{ form.Joining_Year.label_tag }}
-                                    {{ form.Joining_Year }}
+                            <div class="frame-42">
+                                <div class="frame-39">
+                                    <div class="frame-30">
+                                        <div class="frame-24">
+                                            <div class="name">Name:</div>
+                                            <input type="text" class="frame-412" placeholder="Name" />
+                                        </div>
+                                        <div class="frame-272">
+                                            <div class="gender">Gender:</div>
+                                            <div class="frame-413">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="frame-37">
+                                        <div class="frame-24">
+                                            <input type="email" class="frame-412" placeholder="Enter Email ID" />
+                                            <div class="frame-412"></div>
+                                        </div>
+                                        <div class="frame-26">
+                                            <div class="phone-no">Phone No:</div>
+                                            <input type="number" class="frame-412" placeholder="Enter Phone" />
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="form-group">
-                                    {{ form.sem.label_tag }}
-                                    {{ form.sem }}
+                            </div>
+                            <div class="frame-40">
+                                <div class="frame-382">
+                                    <div class="frame-24">
+                                        <div class="joining-year">Joining Year:</div>
+                                        <div class="frame-413">
+                                        </div>
+                                    </div>
+                                    <div class="frame-272">
+                                        <div class="dept-id">Dept ID:</div>
+                                        <div class="frame-413">
+                                            <svg class="keyboard-arrow-down4" width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <path d="M8.11997 10.0669L12 13.9469L15.88 10.0669C16.27 9.67691 16.9 9.67691 17.29 10.0669C17.68 10.4569 17.68 11.0869 17.29 11.4769L12.7 16.0669C12.31 16.4569 11.68 16.4569 11.29 16.0669L6.69997 11.4769C6.30997 11.0869 6.30997 10.4569 6.69997 10.0669C7.08997 9.68691 7.72997 9.67691 8.11997 10.0669Z"
+                                                fill="#955C7E" />
+                                            </svg>
+                                        </div>
+                                    </div>
+                                    <div class="frame-283">
+                                        <div class="subject-id">Subject ID:</div>
+                                        <input type="text" class="frame-412" placeholder="Enter SubjectIDs" />
+                                    </div>
                                 </div>
-                                <div class="form-group">
-                                    {{ form.Dept_ID.label_tag }}
-                                    {{ form.Dept_ID }}
-                                </div>
-                                <div class="form-group">
-                                    {{ form.subject_id.label_tag }}
-                                    {{ form.subject_id }}
-                                </div>
-                                <div class="form-group">
-                                    {{ form.password.label_tag }}
-                                    {{ form.password }}
-                                </div>
-                                <div class="form-group">
-                                    {{ form.confirm_password.label_tag }}
-                                    {{ form.confirm_password }}
-                                </div>
+                            </div>
+                            <div class="frame-262">
+                                <button type="submit" class="sign-up" name="submit">Signup</button>
                             </div>
                         </div>
-                        <button type="submit" class="btnSubmit">Take Admission</button>
-                        <div class="text-center">Already have an account? <a href="student_login">Login here</a></div>
+                        <div class="text-center">Don't have an account? <a href="login_page.html">SignUp here</a></div>
                     </div>
                 </div>
             </div>
-        </form>
         </div>
-    </div>
 
+        </div>
+        </div>
+        </div>
+    </form>
 </body>
 
 </html>
