--- a/LMS/static/studentdashboard.css
+++ b/LMS/static/studentdashboard.css
@@ -4,13 +4,13 @@
 }
 .desktop-36 {
   background: #ffffff;
-  height: 1024px;
+  height: 200vh;
   position: relative;
   overflow: hidden;
 }
 .frame-43 {
   background: #fff5fb;
-  width: 1440px;
+  width: 100%;
   height: 84px;
   position: absolute;
   left: 0px;
@@ -49,8 +49,8 @@
   overflow: visible;
 }
 .ilogo {
-  width: 165px;
-  height: 63.8px;
+  width: 80%px;
+  height: 60.5;
   position: absolute;
   left: 10px;
   top: 10px;
@@ -235,4 +235,7 @@
   font-size: 24px;
   font-weight: 600;
   position: relative;
+}
+.hidden {
+    display: none;
 }
